Fixing up for Java 21